# PlantVarFilter

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: publish.yml
PlantVarFilter/: batch_gwas.py  bcftools_utils.py  genomic_prediction_pipeline.py  gwas_pipeline.py  helpers.py  ld_utils.py  main_ui.py  samtools_utils.py  variant_caller_utils.py  vcf_quality.py
PlantVarFilter/linux/: __init__.py  bowtie2  bowtie2-build  bowtie2-build-s  tabix
PlantVarFilter/preanalysis/: __init__.py  aligner.py  fastq_qc.py  reference_manager.py
PlantVarFilter/ui/: ui_components.py  ui_header.py  ui_pages.py  watermark.py
config/: index.html
docs/: EXPERIMENT.md  EXPERIMENT_Arabidopsis_genomics_data.md  EXPERIMENT_Barley_genomics.md  EXPERIMENT_ORIZA_genomics_data.md  config.md  gallery.md  index.md  usage.md
docs/images/: EXPERIMENT_Wheat_genomics_data.md
docs/results/07092025_154023_FaST-LMM/: gwas_results_top10000.csv
example_project/: config.json
example_project/input/: expanded_traits.csv
example_project/output/: filtered_variants.csv  gwas_basic_results.csv
gallery/: index.html
plantvarfilter/: LICENSE  main_ui.py  pangenome_builder.py
plantvarfilter/linux/: bcftools  bowtie2-align-s  samtools
plantvarfilter/ui/: ui_pages.py
recipes/plantvarfilter/: meta.yaml
search/: search_index.json
src/: app.py  filter.py  parser.py  visualize.py
src/plantvarfilter/: __init__.py  annotator.py  cli.py  filter.py  gwas_snp.py  parser.py  regression_gwas.py  visualize.py
tests/: test_cli_init.py  test_filter.py  test_visulaization.py
usage/: index.html
