[tool.poetry]
name = "PlantVarFilter"
version = "0.2.0"
description = "Full GWAS software that combines traditional statistical models with the power of Artificial Intelligence models"
authors = ["Ahmed Yassin  <ahmedyassin300@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dearpygui = "*"
dearpygui-ext = "*"
pandas = "*"
fastlmm = "*"
geneview = "*"
matplotlib = "*"
xgboost = "*"
scikit-learn="*"
scipy="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plantvarfilter = "plantvarfilter.main_gui:main"

