[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantvarfilter"
version = "0.2.0"
description = "Integrated GWAS and genomic prediction pipeline with a GUI for plant genomics."
readme = "README.md"
authors = [
    { name = "Ahmed Yassin", email = "ahmedyassin300@outlook.com" },
    { name = "Falak Sher Khan", email = "falak.khan@pku.edu.cn" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["GWAS", "genomics", "plants", "bioinformatics", "variant-calling", "machine-learning"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "dearpygui>=1.11"
]

[project.optional-dependencies]
ml = ["xgboost>=2.0"]
gwas = ["fastlmm", "pysnptools", "geneview"]
all = ["xgboost>=2.0", "fastlmm", "pysnptools", "geneview"]

[project.scripts]
plantvarfilter = "plantvarfilter.main_ui:main"
pvf-gwas = "plantvarfilter.gwas_pipeline:cli"
pvf-batch-gwas = "plantvarfilter.batch_gwas:cli"

[project.urls]
Homepage = "https://github.com/AHMEDY3DGENOME/PlantVarFilter"
Documentation = "https://github.com/AHMEDY3DGENOME/PlantVarFilter/wiki"
"Issue Tracker" = "https://github.com/AHMEDY3DGENOME/PlantVarFilter/issues"
